--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "antd": "^3.20.7",
     "babel-plugin-import": "^1.12.0",
     "customize-cra": "^0.4.1",
+    "echarts": "^4.2.1",
+    "http-proxy-middleware": "^0.19.1",
+    "qs": "^6.7.0",
     "react": "^16.8.6",
     "react-app-rewired": "^2.1.3",
     "react-dom": "^16.8.6",
@@ -17,7 +20,9 @@
     "redux-actions": "^2.6.5",
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.3.2",
-    "whatwg-fetch": "^3.0.0"
+    "wangeditor": "^3.1.1",
+    "whatwg-fetch": "^3.0.0",
+    "xlsx": "^0.14.4"
   },
   "scripts": {
     "start": "react-app-rewired start",
